--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.4.1",
+    "firebaseui": "^4.8.0",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
