--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "firebase": "^8.4.1",
     "firebaseui": "^4.8.0",
     "materialize-css": "^1.0.0-rc.2",
+    "vee-validate": "^4.3.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
